--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -1059,8 +1059,260 @@
       </div>
     </section>
 
+    <!-- ##### How We Work Area Starts ##### -->
+    <section
+      class="container elementor-section elementor-top-section elementor-element elementor-element-48666b1 elementor-section-boxed elementor-section-height-default elementor-section-height-default"
+      data-id="48666b1"
+      data-element_type="section"
+      data-settings='{"background_background":"classic"}'
+    >
+      <div class="elementor-container elementor-column-gap-wide">
+        <div class="elementor-row">
+          <div
+            class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-3b2741b"
+            data-id="3b2741b"
+            data-element_type="column"
+          >
+            <div class="elementor-column-wrap elementor-element-populated">
+              <div class="elementor-widget-wrap">
+                <div class="secondary-heading">
+                  <h2
+                    class="h1 font-bold text-center wow fadeInUp mt-50"
+                    style="text-align: center; padding-block-end: 1.5rem"
+                  >
+                    How we work with your organisation
+                  </h2>
+                  <p>Our approach is consulting-led but execution-focused, so you are not
+          left with only documents, you get working systems and capability.</p>
+                  <span class="secondary-line"></span>
+                </div>
+                <div
+                  class="elementor-element elementor-element-799e6d6 elementor-widget-divider--view-line elementor-widget elementor-widget-divider"
+                  data-id="799e6d6"
+                  data-element_type="widget"
+                  data-widget_type="divider.default"
+                >
+                  <div class="elementor-widget-container">
+                    <div class="elementor-divider">
+                      <span class="elementor-divider-separator"></span>
+                    </div>
+                  </div>
+                </div>
+                <div
+                  class="elementor-element elementor-element-97a7f9c elementor-widget elementor-widget-oew-timeline"
+                  data-id="97a7f9c"
+                  data-element_type="widget"
+                  data-widget_type="oew-timeline.default"
+                >
+                  <div class="elementor-widget-container">
+                    <div class="oew-timeline oew-timeline-center">
+                      <div class="oew-timeline-inner">
+                        <div class="oew-timeline-item oew-timeline-item-left">
+                          <div class="oew-timeline-item-wrap">
+                            <div class="oew-timeline-line"><span></span></div>
+                            <div class="oew-timeline-item-container">
+                              <div
+                                class="oew-timeline-icon oew-timeline-custom-icon"
+                              >
+                                <span
+                                  ><i
+                                    aria-hidden="true"
+                                    class="fas fa-file-alt"
+                                    style="color: #009e64"
+                                  ></i
+                                ></span>
+                              </div>
+                              <div
+                                class="oew-timeline-item-main oew-timeline-item-main-left"
+                              >
+                                <span class="oew-timeline-arrow"></span>
+                                <div class="oew-timeline-desc">
+                                  <div class="oew-timeline-excerpt">
+                                    <h4 style="text-align: left">
+                                      <span style="color: #04283a"
+                                        ><strong>Discovery &amp; diagnosis</strong></span
+                                      >
+                                    </h4>
+                                    <p style="text-align: left">
+                                      We review your current HR practices, documentation, systems and pain
+            points. This may include audits of policies, recruitment pipelines,
+            payroll processes and employee feedback.
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="oew-timeline-item">
+                          <div class="oew-timeline-date">
+                            <span>Stage 1</span>
+                          </div>
+                        </div>
+                        <div class="oew-timeline-item">
+                          <div
+                            class="oew-timeline-date oew-timeline-date-right"
+                          >
+                            <span>Stage 2</span>
+                          </div>
+                        </div>
+
+                        <div class="oew-timeline-item oew-timeline-item-right">
+                          <div class="oew-timeline-item-wrap">
+                            <div class="oew-timeline-line"><span></span></div>
+                            <div class="oew-timeline-item-container">
+                              <div
+                                class="oew-timeline-icon oew-timeline-custom-icon"
+                              >
+                                <span
+                                  ><i
+                                    aria-hidden="true"
+                                    class="fas fa-file-alt"
+                                    style="color: #036ca6"
+                                  ></i
+                                ></span>
+                              </div>
+                              <div
+                                class="oew-timeline-item-main oew-timeline-item-main-right"
+                              >
+                                <span class="oew-timeline-arrow"></span>
+                                <div class="oew-timeline-desc">
+                                  <div class="oew-timeline-excerpt">
+                                    <h4 style="text-align: left">
+                                      <span style="color: #04283a"
+                                        ><strong>Design &amp; alignment<br /></strong
+                                      ></span>
+                                    </h4>
+                                    <p style="text-align: left">
+                                      We co-create clear frameworks: role profiles, process maps, policy
+            structures, recruitment workflows, learning frameworks and
+            governance mechanisms aligned with your strategy.
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="oew-timeline-item oew-timeline-item-left">
+                          <div class="oew-timeline-item-wrap">
+                            <div class="oew-timeline-line"><span></span></div>
+                            <div class="oew-timeline-item-container">
+                              <div
+                                class="oew-timeline-icon oew-timeline-custom-icon"
+                              >
+                                <span
+                                  ><i
+                                    aria-hidden="true"
+                                    class="fas fa-file-alt"
+                                    style="color: #009e64"
+                                  ></i
+                                ></span>
+                              </div>
+                              <div
+                                class="oew-timeline-item-main oew-timeline-item-main-left"
+                              >
+                                <span class="oew-timeline-arrow"></span>
+                                <div class="oew-timeline-desc">
+                                  <div class="oew-timeline-excerpt">
+                                    <h4 style="text-align: left">
+                                      <span style="color: #04283a"
+                                        ><strong>Implementation &amp; handover<br /></strong
+                                      ></span>
+                                    </h4>
+                                    <p style="text-align: left">
+                                      We support putting new structures into practice—drafting templates,
+            running pilot recruitment cycles, setting up trackers and supporting
+            change communication with leaders and staff.
+                                    </p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="oew-timeline-item">
+                          <div class="oew-timeline-date">
+                            <span>Stage 3</span>
+                          </div>
+                        </div>
+                        <div class="oew-timeline-item">
+                          <div
+                            class="oew-timeline-date oew-timeline-date-right"
+                          >
+                            <span>Stage 4</span>
+                          </div>
+                        </div>
+
+                        <div class="oew-timeline-item oew-timeline-item-right">
+                          <div class="oew-timeline-item-wrap">
+                            <div class="oew-timeline-line"><span></span></div>
+                            <div class="oew-timeline-item-container">
+                              <div
+                                class="oew-timeline-icon oew-timeline-custom-icon"
+                              >
+                                <span
+                                  ><i
+                                    aria-hidden="true"
+                                    class="fas fa-file-alt"
+                                    style="color: #036ca6"
+                                  ></i
+                                ></span>
+                              </div>
+                              <div
+                                class="oew-timeline-item-main oew-timeline-item-main-right"
+                              >
+                                <span class="oew-timeline-arrow"></span>
+                                <div class="oew-timeline-desc">
+                                  <div class="oew-timeline-excerpt">
+                                    <h4 style="text-align: left">
+                                      <span style="color: #04283a"
+                                        ><strong>Capability transfer &amp; support</strong></span
+                                      >
+                                    </h4>
+                                    <p style="text-align: left">
+                                      We train HR and line managers to use the new tools, and offer
+            ongoing support, audits or outsourcing options where needed so the
+            system continues to work after the project ends.
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div data-aos="fade-up" data-aos="fade-down" class="actions">
+                <a
+                  href="booking.html"
+                  class="btn-solid"
+                  data-analytics="cta_book_strategy_call"
+                  >Book Strategy Call</a
+                >
+                <a
+                  href="contact.html"
+                  class="btn-ghost"
+                  data-analytics="cta_request_proposal"
+                  >Request Proposal</a
+                >
+              </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ##### How We Work ##### -->
+
     <!-- PROCESS / HOW WE WORK -->
-    <section id="process" class="service-process">
+    <!-- <section id="process" class="service-process">
       <div class="section-header">
         <h4 class="section-tag">Approach</h4>
         <h2>How we work with your organisation</h2>
@@ -1104,7 +1356,7 @@
           </p>
         </li>
       </ol>
-    </section>
+    </section> -->
 
     <!-- OUTCOMES & PROOF -->
     <section id="outcomes" class="service-outcomes">
