--- a/professional-training/finance-accounting.html
+++ b/professional-training/finance-accounting.html
@@ -807,7 +807,7 @@
         disciplined decisions about cost, growth and risk.
       </p>
       <div class="hero-links">
-        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
