--- a/professional-training/health-safety-environment.html
+++ b/professional-training/health-safety-environment.html
@@ -807,7 +807,7 @@
         with safety and risk awareness at the centre of their everyday work.
       </p>
       <div class="hero-links">
-        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
