--- a/professional-training/hr-people-maagement-training.html
+++ b/professional-training/hr-people-maagement-training.html
@@ -808,7 +808,7 @@
         people operations.
       </p>
       <div class="hero-links">
-        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
