--- a/professional-training/leadership-management.html
+++ b/professional-training/leadership-management.html
@@ -808,7 +808,7 @@
         teams and deliver results in dynamic environments.
       </p>
       <div class="hero-links">
-        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
