--- a/professional-training/technology-data.html
+++ b/professional-training/technology-data.html
@@ -808,7 +808,7 @@
         manual reporting and start using data to shape better decisions.
       </p>
       <div class="hero-links">
-        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
