--- a/services/business-development-strategy.html
+++ b/services/business-development-strategy.html
@@ -681,7 +681,7 @@
         </ul>
       </nav>
     </header>
-    
+
     <!-- HERO -->
     <main class="hero">
         <h1 data-aos="fade-up" data-aos="fade-down">Turn your strategy from intention <br />into execution</h1>
@@ -694,7 +694,7 @@
           execute with discipline across markets and teams.
         </p>
         <div data-aos="fade-up" data-aos="fade-down" class="hero-links">
-          <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+          <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
 
@@ -957,7 +957,7 @@
       <div class="service-modules__grid">
         <article class="module-card" id="research">
           <h3>
-            <a href="/services/market-research-business-analysis">
+            <a href="/business-development/market-research-business-analysis.html">
               Market Research &amp; Business Analysis
             </a>
           </h3>
@@ -968,7 +968,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/market-research-business-analysis"
+            href="/business-development/market-research-business-analysis.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -976,7 +976,7 @@
 
         <article class="module-card" id="models">
           <h3>
-            <a href="/services/business-model-structure-design">
+            <a href="/business-development/business-model-structure-design.html">
               Business Model &amp; Structure Design
             </a>
           </h3>
@@ -987,7 +987,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/business-model-structure-design"
+            href="/business-development/business-model-structure-design.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -995,7 +995,7 @@
 
         <article class="module-card" id="execution">
           <h3>
-            <a href="/services/corporate-strategy-execution">
+            <a href="/business-development/corporate-strategy-execution.html">
               Corporate Strategy &amp; Execution
             </a>
           </h3>
@@ -1005,7 +1005,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/corporate-strategy-execution"
+            href="/business-development/corporate-strategy-execution.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1013,7 +1013,7 @@
 
         <article class="module-card" id="branding">
           <h3>
-            <a href="/services/corporate-branding">
+            <a href="/business-development/corporate-branding.html">
               Corporate Branding
             </a>
           </h3>
@@ -1022,14 +1022,14 @@
             partners and talent recognise who you are and why you can be
             trusted.
           </p>
-          <a class="module-card__link" href="/services/corporate-branding">
+          <a class="module-card__link" href="/business-development/corporate-branding.html">
             Learn more<span aria-hidden="true"> ›</span>
           </a>
         </article>
 
         <article class="module-card" id="process">
           <h3>
-            <a href="/services/business-process-optimization">
+            <a href="/business-development/business-process-optimization.html">
               Business Process Optimization
             </a>
           </h3>
@@ -1040,7 +1040,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/business-process-optimization"
+            href="/business-development/business-process-optimization.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1048,7 +1048,7 @@
 
         <article class="module-card" id="valuation">
           <h3>
-            <a href="/services/financial-modeling-valuation">
+            <a href="/business-development/financial-modeling-valuation.html">
               Financial Modeling &amp; Valuation
             </a>
           </h3>
@@ -1058,7 +1058,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/financial-modeling-valuation"
+            href="/business-development/financial-modeling-valuation.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1066,7 +1066,7 @@
 
         <article class="module-card" id="audit">
           <h3>
-            <a href="/services/auditing-reconciliation">
+            <a href="/business-development/auditing-reconciliation.html">
               Auditing &amp; Reconciliation
             </a>
           </h3>
@@ -1076,7 +1076,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/auditing-reconciliation"
+            href="/business-development/auditing-reconciliation.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1575,7 +1575,7 @@
           conversation with CICL to map where to focus first.
         </p>
         <div class="service-cta__actions">
-          <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+          <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
       </div>
