--- a/services/professional-training-programme.html
+++ b/services/professional-training-programme.html
@@ -696,7 +696,7 @@
           teams who can execute strategy—not just attend workshops.
         </p>
         <div class="action-links">
-          <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+          <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
 
@@ -937,7 +937,7 @@
       <div class="service-modules__grid">
         <article class="module-card" id="leadership">
           <h3>
-            <a href="/services/training-leadership-management">
+            <a href="/professional-training/leadership-management.html">
               Leadership &amp; Management
             </a>
           </h3>
@@ -947,7 +947,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/training-leadership-management"
+            href="/professional-training/leadership-management.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -955,7 +955,7 @@
 
         <article class="module-card" id="hr">
           <h3>
-            <a href="/services/training-hr-people-management">
+            <a href="/professional-training/hr-people-maagement-training.html">
               HR &amp; People Management
             </a>
           </h3>
@@ -965,7 +965,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/training-hr-people-management"
+            href="/professional-training/hr-people-maagement-training.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -973,7 +973,7 @@
 
         <article class="module-card" id="finance">
           <h3>
-            <a href="/services/training-finance-accounting">
+            <a href="/professional-training/finance-accounting.html">
               Finance &amp; Accounting
             </a>
           </h3>
@@ -983,7 +983,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/training-finance-accounting"
+            href="/professional-training/finance-accounting.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -991,7 +991,7 @@
 
         <article class="module-card" id="tech">
           <h3>
-            <a href="/services/training-technology-data">
+            <a href="/professional-training/technology-data.html">
               Technology &amp; Data
             </a>
           </h3>
@@ -1001,7 +1001,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/training-technology-data"
+            href="/professional-training/technology-data.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1009,7 +1009,7 @@
 
         <article class="module-card" id="ops">
           <h3>
-            <a href="/services/training-operations-supply-chain">
+            <a href="/professional-training/operation-supply-chain.html">
               Operations &amp; Supply Chain
             </a>
           </h3>
@@ -1019,7 +1019,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/training-operations-supply-chain"
+            href="/professional-training/operation-supply-chain.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1027,7 +1027,7 @@
 
         <article class="module-card" id="hse">
           <h3>
-            <a href="/services/training-hse">
+            <a href="/professional-training/health-safety-environment.html">
               Health, Safety &amp; Environment (HSE)
             </a>
           </h3>
@@ -1035,14 +1035,14 @@
             Programmes that embed safety, compliance and risk awareness into
             everyday behaviour in offices, field work and project sites.
           </p>
-          <a class="module-card__link" href="/services/training-hse">
+          <a class="module-card__link" href="/professional-training/health-safety-environment.html">
             Learn more<span aria-hidden="true"> ›</span>
           </a>
         </article>
 
         <article class="module-card" id="sales">
           <h3>
-            <a href="/services/training-sales-marketing">
+            <a href="/professional-training/sales-marketing.html">
               Sales &amp; Marketing
             </a>
           </h3>
@@ -1052,7 +1052,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/training-sales-marketing"
+            href="/professional-training/sales-marketing.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1486,7 +1486,7 @@
           we can design a focused programme around them.
         </p>
         <div class="service-cta__actions">
-          <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+          <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
       </div>
