--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -694,7 +694,7 @@
           with confidence.
         </p>
         <div class="action-links">
-          <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+          <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
 
@@ -948,7 +948,7 @@
       <div class="service-modules__grid">
         <article class="module-card" id="recruitment">
           <h3>
-            <a href="/services/recruitment-selection">
+            <a href="/talent-management-hr-solution/recruitment-selection.html">
               Recruitment &amp; Selection
             </a>
           </h3>
@@ -959,7 +959,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/recruitment-selection"
+            href="/talent-management-hr-solution/recruitment-selection.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -967,7 +967,7 @@
 
         <article class="module-card" id="training">
           <h3>
-            <a href="/services/training-development">
+            <a href="/talent-management-hr-solution/training-development.html">
               Training &amp; Development
             </a>
           </h3>
@@ -978,7 +978,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/training-development"
+            href="/talent-management-hr-solution/training-development.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -986,7 +986,7 @@
 
         <article class="module-card" id="outsourcing">
           <h3>
-            <a href="/services/talent-payroll-outsourcing">
+            <a href="/talent-management-hr-solution/talent-payroll-outsourcing.html">
               Talent &amp; Payroll Outsourcing
             </a>
           </h3>
@@ -997,7 +997,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/talent-payroll-outsourcing"
+            href="/talent-management-hr-solution/talent-payroll-outsourcing.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1005,7 +1005,7 @@
 
         <article class="module-card" id="verification">
           <h3>
-            <a href="/services/background-checks-verification">
+            <a href="/talent-management-hr-solution/background-checks-verification.html">
               Background Checks &amp; Verification
             </a>
           </h3>
@@ -1016,7 +1016,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/background-checks-verification"
+            href="/talent-management-hr-solution/background-checks-verification.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1024,7 +1024,7 @@
 
         <article class="module-card" id="policies">
           <h3>
-            <a href="/services/hr-policies-employee-handbook">
+            <a href="/talent-management-hr-solution/hr-policies-employee-handbook.html">
               HR Policies &amp; Employee Handbook
             </a>
           </h3>
@@ -1035,7 +1035,7 @@
           </p>
           <a
             class="module-card__link"
-            href="/services/hr-policies-employee-handbook"
+            href="/talent-management-hr-solution/hr-policies-employee-handbook.html"
           >
             Learn more<span aria-hidden="true"> ›</span>
           </a>
@@ -1043,7 +1043,7 @@
 
         <article class="module-card" id="career">
           <h3>
-            <a href="/services/career-services">
+            <a href="/talent-management-hr-solution/career-service.html">
               Career Services
             </a>
           </h3>
@@ -1052,7 +1052,7 @@
             internal progression or outplacement, helping them present their
             value with clarity.
           </p>
-          <a class="module-card__link" href="/services/career-services">
+          <a class="module-card__link" href="/talent-management-hr-solution/career-service.html">
             Learn more<span aria-hidden="true"> ›</span>
           </a>
         </article>
@@ -1499,7 +1499,7 @@
           policies, payroll, or a full HR transformation.
         </p>
         <div class="service-cta__actions">
-          <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+          <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
           <a href="/proposal.html" class="btn-ghost">Request Proposal</a>
         </div>
       </div>
