--- a/professional-training/operation-supply-chain.html
+++ b/professional-training/operation-supply-chain.html
@@ -808,7 +808,7 @@
         experience smoother service and the business runs with fewer surprises.
       </p>
       <div class="hero-links">
-        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
