--- a/professional-training/sales-marketing.html
+++ b/professional-training/sales-marketing.html
@@ -809,7 +809,7 @@
         and stronger customer relationships.
       </p>
       <div class="hero-links">
-        <a href="/booking.html" class="btn-solid">Book Strategy Call</a>
+        <a href="/contact.html" class="btn-solid">Book Strategy Call</a>
         <a href="/contact.html" class="btn-ghost">Request Proposal</a>
       </div>
 
