--- a/services/talent-management-hr-solution.html
+++ b/services/talent-management-hr-solution.html
@@ -52,8 +52,10 @@
       content="https://ciconsult.com.ng/images/og/talent-management-hr-og.jpg"
     />
 
-    <!-- Styles -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/elementor.css" />
+    <link rel="stylesheet" href="../css/elementor-css.min.css" />
 
     <!-- Icons -->
     <link
@@ -681,7 +683,7 @@
 
     <!-- HERO -->
     <main class="hero">
-        <h1>Build a workforce that performs, grows and stays</h1>
+        <h1>Build a workforce that performs, <br />grows and stays</h1>
         <p>
           At Conceptual Integrated Consulting Limited (CICL), we help
           organisations move beyond improvised HR. Our Talent Management &amp; HR
